--- a/RD3/Views/AddSampleView.xaml
+++ b/RD3/Views/AddSampleView.xaml
@@ -106,13 +106,14 @@
                     IsEnabled="{Binding Enable}"
                     Style="{StaticResource TextBoxExtend}"
                     Text="{Binding Batch.Name}" />
-                <StackPanel Grid.Column="2" Orientation="Horizontal">
+                <hc:UniformSpacingPanel
+                    Grid.Column="2"
+                    VerticalAlignment="Bottom"
+                    Orientation="Horizontal"
+                    Spacing="5">
                     <Button
                         Width="80"
                         Height="30"
-                        Margin="5"
-                        HorizontalAlignment="Right"
-                        HorizontalContentAlignment="Center"
                         hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                         BorderBrush="{StaticResource PrimaryBrush}"
                         Command="{Binding CancelCommand}"
@@ -122,15 +123,13 @@
                     <Button
                         Width="80"
                         Height="30"
-                        Margin="5"
-                        HorizontalContentAlignment="Center"
                         hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
                         Background="{StaticResource PrimaryBrush}"
                         BorderBrush="{StaticResource PrimaryBrush}"
                         Content="{ex:Language Key='OK'}"
                         FontSize="14"
                         Foreground="White" />
-                </StackPanel>
+                </hc:UniformSpacingPanel>
             </Grid>
 
         </Grid>
