--- a/RD3/Themes/Fonts.xaml
+++ b/RD3/Themes/Fonts.xaml
@@ -6,5 +6,6 @@
     <system:Double x:Key="HeadFontSize">20</system:Double>
     <system:Double x:Key="MediumFontSize">18</system:Double>
     <system:Double x:Key="SubHeadFontSize">16</system:Double>
+    <system:Double x:Key="NormalFontSize">14</system:Double>
     <system:Double x:Key="TextFontSize">12</system:Double>
 </ResourceDictionary>
