--- a/RD3/Views/SampleView.xaml
+++ b/RD3/Views/SampleView.xaml
@@ -13,104 +13,69 @@
     d:DataContext="{d:DesignInstance Type=viewmodels:SampleViewModel}"
     d:DesignHeight="700"
     d:DesignWidth="1350"
-    Background="{StaticResource BackGroundBrush}"
+    Background="{StaticResource DefaultBrush}"
     FontFamily="{StaticResource ENGFontFamily}"
-    TextElement.FontSize="14"
+    TextElement.FontSize="{DynamicResource NormalFontSize}"
     TextElement.FontWeight="Regular"
-    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
     TextOptions.TextRenderingMode="Auto"
     mc:Ignorable="d">
-    <Grid Margin="32">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="40" />
-        </Grid.RowDefinitions>
-        <TextBlock FontSize="40" Text="{ex:Language Key='Sample Manage'}" />
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" />
-            </Grid.ColumnDefinitions>
+    <hc:UniformSpacingPanel
+        Margin="20"
+        Orientation="Vertical"
+        Spacing="10">
+        <DockPanel LastChildFill="False">
             <hc:SearchBar
                 Width="240"
-                Height="30"
-                Margin="5"
+                Height="45"
                 HorizontalAlignment="Left"
                 hc:InfoElement.ShowClearButton="True"
-                IsRealTime="True">
-                <hc:Interaction.Triggers>
-                    <hc:EventTrigger EventName="SearchStarted">
-                        <hc:EventToCommand Command="{Binding SearchCommand}" PassEventArgsToCommand="True" />
-                    </hc:EventTrigger>
-                </hc:Interaction.Triggers>
-            </hc:SearchBar>
-            <Button
-                Grid.Column="1"
-                Height="30"
-                Margin="5"
-                HorizontalContentAlignment="Center"
-                hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
-                hc:IconElement.Geometry="{StaticResource GeometryFilter}"
-                Content="{ex:Language Key='Filters'}"
-                FontSize="14" />
-            <Button
-                Grid.Column="3"
-                Height="30"
-                Margin="5"
-                HorizontalContentAlignment="Center"
-                hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
-                hc:IconElement.Geometry="{StaticResource GeometryAddLog}"
-                Background="{StaticResource PrimaryBrush}"
-                BorderBrush="{StaticResource PrimaryBrush}"
-                Command="{Binding AddSampleCommand}"
-                Content="{ex:Language Key='Log'}"
-                FontSize="14"
-                Foreground="White" />
-            <Button
-                Grid.Column="4"
-                Height="30"
-                Margin="5"
-                HorizontalContentAlignment="Center"
-                hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
-                hc:IconElement.Geometry="{StaticResource GeometryCompare}"
-                Command="{Binding CompareCommand}"
-                CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
-                Content="{ex:Language Key='Compare'}"
-                FontSize="14" />
-            <Button
-                Grid.Column="5"
-                Height="30"
-                Margin="5"
-                HorizontalContentAlignment="Center"
-                hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
-                hc:IconElement.Geometry="{StaticResource GeometryExport}"
-                Command="{Binding ExportCommand}"
-                CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
-                Content="{ex:Language Key='Export'}"
-                FontSize="14" />
-            <Button
-                Grid.Column="6"
-                Height="30"
-                Margin="5"
-                HorizontalContentAlignment="Center"
-                hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
-                hc:IconElement.Geometry="{StaticResource GeometryDelete}"
-                Command="{Binding DeleteCommand}"
-                CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
-                FontSize="14"
-                Foreground="Red" />
-        </Grid>
+                DockPanel.Dock="Left"
+                IsRealTime="True"
+                SearchStarted="TxtSearch_SearchStarted" />
+            <hc:UniformSpacingPanel
+                DockPanel.Dock="Right"
+                Orientation="Horizontal"
+                Spacing="5">
+                <Button
+                    Height="35"
+                    HorizontalContentAlignment="Center"
+                    hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
+                    hc:IconElement.Geometry="{StaticResource GeometryAddLog}"
+                    Background="{StaticResource PrimaryBrush}"
+                    BorderBrush="{StaticResource PrimaryBrush}"
+                    Command="{Binding AddSampleCommand}"
+                    Content="{ex:Language Key='Log'}"
+                    Foreground="White" />
+                <Button
+                    Height="35"
+                    HorizontalContentAlignment="Center"
+                    hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
+                    hc:IconElement.Geometry="{StaticResource GeometryCompare}"
+                    Command="{Binding CompareCommand}"
+                    CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
+                    Content="{ex:Language Key='Compare'}" />
+                <Button
+                    Height="35"
+                    HorizontalContentAlignment="Center"
+                    hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
+                    hc:IconElement.Geometry="{StaticResource GeometryExport}"
+                    Command="{Binding ExportCommand}"
+                    CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
+                    Content="{ex:Language Key='Export'}" />
+                <Button
+                    Height="35"
+                    HorizontalContentAlignment="Center"
+                    hc:BorderElement.CornerRadius="{StaticResource DefaultCornerRadius}"
+                    hc:IconElement.Geometry="{StaticResource GeometryDelete}"
+                    Command="{Binding DeleteCommand}"
+                    CommandParameter="{Binding ElementName=dataGrid, Path=SelectedItem}"
+                    FontSize="14"
+                    Foreground="Red" />
+            </hc:UniformSpacingPanel>
+        </DockPanel>
         <DataGrid
             Name="dataGrid"
-            Grid.Row="2"
             AutoGenerateColumns="False"
             Background="Transparent"
             FontSize="16"
@@ -174,7 +139,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <hc:Pagination
-            Grid.Row="3"
+            Name="pagination"
             HorizontalAlignment="Right"
             VerticalAlignment="Center"
             Background="Transparent"
@@ -189,5 +154,5 @@
                 </hc:EventTrigger>
             </hc:Interaction.Triggers>
         </hc:Pagination>
-    </Grid>
+    </hc:UniformSpacingPanel>
 </UserControl>
