--- a/RD3/Lang/Lang.en-US.xaml
+++ b/RD3/Lang/Lang.en-US.xaml
@@ -99,4 +99,7 @@
     <system:String x:Key="N2">N2</system:String>
     <system:String x:Key="Agit">Agit</system:String>
     <system:String x:Key="DO">DO</system:String>
+    <system:String x:Key="Device">Device</system:String>
+    <system:String x:Key="Liquid">Liquid</system:String>
+    <system:String x:Key="Harvest">Harvest</system:String>
 </ResourceDictionary>
