--- a/RD3/Views/BatchView.xaml
+++ b/RD3/Views/BatchView.xaml
@@ -132,10 +132,10 @@
                     hc:DataGridAttach.ShowSelectAllButton="False"
                     AutoGenerateColumns="False"
                     Background="Transparent"
-                    ColumnWidth="*"
+                    ColumnWidth="SizeToCells"
                     FontSize="14"
                     FrozenColumnCount="2"
-                    HeadersVisibility="All"
+                    HeadersVisibility="Column"
                     IsReadOnly="True"
                     ItemsSource="{Binding BatchCol}"
                     MouseDoubleClick="DataGrid_MouseDoubleClick"
@@ -265,8 +265,9 @@
                     AutoGenerateColumns="False"
                     Background="Transparent"
                     CanUserSortColumns="False"
+                    ColumnWidth="SizeToCells"
                     FontSize="14"
-                    HeadersVisibility="All"
+                    HeadersVisibility="Column"
                     IsReadOnly="True"
                     ItemsSource="{Binding ProjectTemplateCol}"
                     MouseDoubleClick="DataGrid_MouseDoubleClick"
