--- a/RD3/Views/ControlView.xaml
+++ b/RD3/Views/ControlView.xaml
@@ -60,8 +60,9 @@
                         hc:DataGridAttach.ShowSelectAllButton="True"
                         AutoGenerateColumns="False"
                         Background="Transparent"
+                        ColumnWidth="SizeToCells"
                         FontSize="14"
-                        HeadersVisibility="All"
+                        HeadersVisibility="Column"
                         IsReadOnly="True"
                         ItemsSource="{Binding UserCol}"
                         RowHeaderWidth="60"
