--- a/RD3/Views/OperationView.xaml
+++ b/RD3/Views/OperationView.xaml
@@ -94,8 +94,9 @@
             hc:DataGridAttach.ShowSelectAllButton="False"
             AutoGenerateColumns="False"
             Background="Transparent"
+            ColumnWidth="SizeToCells"
             FontSize="14"
-            HeadersVisibility="All"
+            HeadersVisibility="Column"
             IsReadOnly="True"
             ItemsSource="{Binding OperationCol}"
             RowHeaderWidth="60"
