--- a/RD3/Views/ProjectView.xaml
+++ b/RD3/Views/ProjectView.xaml
@@ -161,8 +161,9 @@
                     hc:DataGridAttach.ShowSelectAllButton="False"
                     AutoGenerateColumns="False"
                     Background="Transparent"
+                    ColumnWidth="SizeToCells"
                     FontSize="14"
-                    HeadersVisibility="All"
+                    HeadersVisibility="Column"
                     IsReadOnly="True"
                     ItemsSource="{Binding ProjectCol}"
                     MouseDoubleClick="DataGrid_MouseDoubleClick"
@@ -286,8 +287,9 @@
                     AutoGenerateColumns="False"
                     Background="Transparent"
                     CanUserSortColumns="False"
+                    ColumnWidth="SizeToCells"
                     FontSize="14"
-                    HeadersVisibility="All"
+                    HeadersVisibility="Column"
                     IsReadOnly="True"
                     ItemsSource="{Binding ProjectTemplateCol}"
                     MouseDoubleClick="DataGrid_MouseDoubleClick"
