--- a/RD3/Views/UserView.xaml
+++ b/RD3/Views/UserView.xaml
@@ -135,8 +135,9 @@
                     hc:DataGridAttach.ShowSelectAllButton="False"
                     AutoGenerateColumns="False"
                     Background="Transparent"
+                    ColumnWidth="SizeToCells"
                     FontSize="14"
-                    HeadersVisibility="All"
+                    HeadersVisibility="Column"
                     IsReadOnly="True"
                     ItemsSource="{Binding UserCol}"
                     RowHeaderWidth="60"
