--- a/RD3/Views/CommunicationView.xaml
+++ b/RD3/Views/CommunicationView.xaml
@@ -73,7 +73,7 @@
                 AutoGenerateColumns="False"
                 Background="Transparent"
                 FontSize="14"
-                HeadersVisibility="All"
+                HeadersVisibility="Column"
                 IsReadOnly="True"
                 ItemsSource="{Binding ClientCol}"
                 RowHeaderWidth="60"
